Made TransactionTableModel static and chnged new Integer() to proper form of Integer.valueOf()